--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -103,6 +103,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Setup libusb
+      - name: Setup libusb
+        run: |
+          sudo apt-get install libusb-1.0-0-dev
+
       # Set up Rust with the specific target we need
       - name: Install Rust
         run: rustup toolchain install stable --profile minimal --no-self-update
