--- a/operator/.env.example
+++ b/operator/.env.example
@@ -6,3 +6,6 @@ PROPERTY_ENGINE_URL=http://localhost:3000
 
 # PAT_TOKEN is the token for the PAT (Personal Access Token)
 PAT_TOKEN=
+
+# IPP / Cups Printer URLs (Optional)
+IPP_URLS=http://localhost:631/printers/Brother_QL-700
