--- a/operator/Cargo.toml
+++ b/operator/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.82"
 async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
-brother-ql-rs = "0.2.1"
+# brother-ql-rs = "0.2.1"
 dotenvy = "0.15.7"
 image = "0.25.1"
-printpdf = { version = "0.7.0", features = ["image"] }
-qrcode = "0.14.0"
+# printpdf = { version = "0.7.0", features = ["image"] }
+# qrcode = "0.14.0"
 tracing = "0.1.41"
 thiserror = "2.0.3"
 tracing-subscriber = "0.3.19"
@@ -41,5 +41,7 @@ reqwest = { version = "0.12.9", features = [
 ], default-features = false }
 serde = "1.0.216"
 serde_json = "1.0.133"
-ipp = { version = "5.2.0", features = ["async-client-rustls", "serde"] }
+# ipp = { version = "5.2.0", features = ["async-client-rustls"] }
+ipp = { git = "https://github.com/ancwrd1/ipp.rs.git", branch = "master", features = ["async-client-rustls"], default-features = false }
 envy = "0.4.2"
+rustls = "0.23.20"
