--- a/web/package.json
+++ b/web/package.json
@@ -31,10 +31,10 @@
     "@radix-ui/react-tooltip": "^1.1.5",
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
-    "@tanstack/query-sync-storage-persister": "^5.x.x",
+    "@tanstack/query-sync-storage-persister": "^5.62.3",
     "@tanstack/react-form": "^0.39.0",
     "@tanstack/react-query": "^5.x.x",
-    "@tanstack/react-query-persist-client": "^5.x.x",
+    "@tanstack/react-query-persist-client": "^5.62.3",
     "@tanstack/react-router": "^1.90.0",
     "@tanstack/react-virtual": "^3.11.2",
     "@vitejs/plugin-react": "^4.3.1",
@@ -43,10 +43,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "embla-carousel": "^8.5.1",
     "embla-carousel-auto-height": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "fuse.js": "^7.0.0",
     "globals": "^15.8.0",
