--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -81,6 +81,7 @@ async-stream = "0.3.6"
 futures-core = "0.3.31"
 async-trait = "0.1.83"
 semver = { version = "1.0.24", features = ["serde"] }
+parallel-stream = "2.1.3"
 
 [dependencies.uuid]
 version = "1.10.0"
