--- a/web/package.json
+++ b/web/package.json
@@ -47,6 +47,8 @@
     "embla-carousel": "^8.5.1",
     "embla-carousel-auto-height": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
+    "eslint-import-resolver-vite": "^2.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "eslint-plugin-unused-imports": "^4.0.1",
     "fuse.js": "^7.0.0",
