Introduce openapi-hooks

--- a/web/package.json
+++ b/web/package.json
@@ -55,6 +55,7 @@
     "globals": "^15.8.0",
     "javascript-time-ago": "^2.5.11",
     "leaflet": "^1.9.4",
+    "openapi-hooks": "^0.0.3",
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
@@ -64,6 +65,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.14.1",
     "react-leaflet": "^4.2.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
