--- a/web/package.json
+++ b/web/package.json
@@ -55,7 +55,7 @@
     "globals": "^15.8.0",
     "javascript-time-ago": "^2.5.11",
     "leaflet": "^1.9.4",
-    "openapi-hooks": "^0.0.3",
+    "openapi-hooks": "0.0.3-alpha.3",
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
