Introduce placeholder landing WIP

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -31,3 +31,4 @@ KAGI_API_KEY=
 
 # Optional (could come in handy)
 OPENID_ACCEPT_INVALID_CERTS=false
+LANDING_MODE=false # Whether the landing page is enabled.
